.deployment/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: site-strootje

spec:
  template:
    spec:
      containers:
        - name: site-strootje
          image: ghcr.io/strootje/site-strootje:main
          securityContext:
            seccompProfile: { type: RuntimeDefault }
            allowPrivilegeEscalation: false
            capabilities: { drop: [ALL] }
            runAsNonRoot: true
          ports: [{ name: http, containerPort: 3000, protocol: TCP }]
          imagePullPolicy: Always
      serviceAccountName: strootje
  revisionHistoryLimit: 1
  replicas: 1
